2.?.? - 2011/??/??
==================

  - On the Mac, running a game by dropping its file on the QTads icon is now
    supported.

  - When the VM requests input from the player, the maximum allowed length of
    input is now taken into account.  Previously, the interpreter would allow
    input to be much longer than what the VM accepts and the extra characters
    were simply truncated.

  - Renamed the Digital Sound/MIDI Music sound options.  They were misleading.
    The "Enable MIDI Sound" option did not control MIDI but rather the
    background sound layer, which is not restricted to MIDI.

  - The interpreter will now correctly disable keyboard cursor blinking if
    needed (for example when blinking has been disabled in the operating
    system's settings.)  Furthermore, blinking will only occur for as long as
    the interpreter window has focus.

  - The last entered directory for the "Open New Game" dialog is now remembered
    between sessions.


2.0.2 - 2011/01/13
==================

  - In games that use background images, there was a visual glitch in the part
    of the background image near the vertical scrollbar.  This has been fixed.

  - You can now drag&drop TADS game files into the application window to load
    them into the interpreter.

  - Clicking on a banner window no longer results in not being able to compose
    accented characters (or other characters requiring "dead keys".)

  - Text grid banners should now have the correct foreground/background color
    (light gray/black) when a game doesn't explicitly set them.

  - Games are now able again to display dialog windows with buttons.

  - A crash at exit that occured on some systems after running games that play
    MIDI music has been fixed.


2.0.1 - 2010/10/10
==================

  - A new "Restart Current Game" menu option has been added.

  - Digital sound fade-in, fade-out and cross-fades are now fully supported on
    all operating systems.  I think...
