@@ -1,5 +1,6 @@
 TEMPLATE = app
 CONFIG += qt silent warn_off
+QT += network
 VERSION = 2.0.99
 macx {
 	QMAKE_INFO_PLIST = Info.plist
